<resources>
    <string name="app_name">WGFinder</string>

    <string name="toSecondActivity">"nächste Activity öffnen "</string>
    <string name="toFirstActivity">"erste Activity öffnen "</string>
    <string name="action_info">Info</string>
    <string name="action_beenden">Beenden</string>
    <string name="action_LogOut">Log Out</string>

    <string name="nachname">Nachname</string>
    <string name="vorname">Vorname</string>
    <string name="Email">E-Mail</string>
    <string name="Passwort">Passwort</string>
    <string name="PasswortWdh">Passwort wiederholen</string>
    <string name="Datenschutz">Ich stimme den Datenschutzbestimmungen zu</string>
    <string name="Abbrechen">Abbrechen</string>
    <string name="erstelleDeinenAccount">Erstelle deinen Account</string>
    <string name="Login">Login</string>
    <string name="loginMitFacebook">Login mit Facebook</string>
    <string name="loginMitTwitter">Login mit Twitter</string>
    <string name="accountErstellen">Account erstellen</string>
    <string name="passwortVergessen">Passwort vergessen?</string>
    <string name="oder">oder</string>
    <string name="Bearbeiten">Bearbeiten</string>
    <string name="action_ProfilBearbeiten">Profil bearbeiten</string>
    <string name="action_Profil">Profil</string>
    <string name="Suchen">Zur Suche</string>
    <string name="action_matches">Matches</string>
</resources>
