<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_info"
            android:orderInCategory="100"
            android:title="@string/action_info"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_LogOut"
            android:orderInCategory="100"
            android:title="@string/action_LogOut"
            android:icon="@drawable/ic_action_logout"
            app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_matches"
        android:orderInCategory="100"
        android:title="@string/action_matches"
        android:icon="@drawable/ic_match"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_ProfilAnsehen"
        android:orderInCategory="100"
        android:title="@string/action_Profil"
        android:icon="@drawable/ic_profil_ansehen"
        app:showAsAction="never" />

</menu>