<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Account_erstellen">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp" android:layout_marginTop="40dp"
                            android:hint="@string/vorname"/>
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:hint="@string/nachname"
                            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="30dp"
                            app:layout_constraintTop_toBottomOf="@+id/editText5"/>
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText2" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="30dp"
                            app:layout_constraintTop_toBottomOf="@+id/editText" android:layout_marginLeft="20dp"
                            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp" android:hint="@string/Email"/>
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText3" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/editText2"
                            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp" android:hint="@string/Passwort"/>
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:ems="10"
                            android:id="@+id/editText4" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/editText3"
                            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp" android:hint="@string/PasswortWdh"/>
                    <CheckBox
                            android:text="@string/Datenschutz"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/checkBox" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="22dp" app:layout_constraintTop_toBottomOf="@+id/editText4"
                            android:layout_marginLeft="20dp" android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginRight="20dp"/>
                    <Button
                            android:text="@string/erstelleDeinenAccount"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button11" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="32dp"
                            app:layout_constraintTop_toBottomOf="@+id/checkBox" android:background="#47525E"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                    />
                    <Button
                            android:text="@string/Abbrechen"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/button12" app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginTop="5dp"
                            app:layout_constraintTop_toBottomOf="@+id/button11" android:background="#47525E"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:onClick="sendMessage"/>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>