<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/linearLayout"
                    app:layout_constraintTop_toTopOf="parent">
                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:ems="10"
                            android:id="@+id/am_et_Email" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:hint="@string/Email"
                            android:layout_marginStart="20dp" android:layout_marginEnd="20dp"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"/>
                    <EditText
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:ems="10"
                            android:id="@+id/am_et_Passwort" app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/am_et_Email" android:hint="@string/Passwort"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginTop="20dp"/>
                    <Button
                            android:text="@string/Login"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/am_b_Login" android:layout_marginEnd="20dp"
                            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="20dp"
                            app:layout_constraintTop_toBottomOf="@+id/am_et_Passwort" android:layout_marginTop="30dp"
                            android:textColor="@android:color/background_light" android:background="#47525E"/>
                    <Button
                            android:text="@string/loginMitFacebook"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/am_b_LoginFacebook"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                            android:layout_marginStart="20dp" android:textColor="@android:color/background_light"
                            android:background="#3C4858"
                            app:layout_constraintHorizontal_bias="1.0"
                            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                            android:drawableLeft="@drawable/facebook"
                            android:padding="16dp"/>
                    <Button
                            android:text="@string/loginMitTwitter"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/am_b_LoginTwitter" android:layout_marginTop="10dp"
                            app:layout_constraintTop_toBottomOf="@+id/am_b_LoginFacebook"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="20dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                            android:textColor="@android:color/background_light"
                            android:background="#8492A6"
                            android:drawableLeft="@drawable/twitter"
                            android:padding="16dp"/>
                    <Button
                            android:text="@string/accountErstellen"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/am_b_AccountErstellen" android:layout_marginTop="10dp"
                            app:layout_constraintTop_toBottomOf="@+id/am_b_LoginTwitter"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="20dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="20dp"
                            android:textColor="@android:color/background_light"
                            android:background="#C0CCDA"/>
                    <TextView
                            android:text="Passwort vergessen?"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginLeft="320dp" android:layout_marginStart="320dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="320dp"
                            android:layout_marginRight="320dp" android:layout_marginTop="15dp"
                            app:layout_constraintTop_toBottomOf="@+id/am_b_AccountErstellen" android:autoLink="map"/>
                    <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/am_b_Login" android:layout_marginTop="40dp"
                            android:id="@+id/linearLayout2">
                        <android.support.constraint.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                            <View
                                    android:text="TextView"
                                    android:layout_width="0dp"
                                    android:layout_height="1dp"
                                    android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="7dp"
                                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                                    android:background="@android:color/darker_gray"
                                    android:layout_marginStart="20dp" app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginEnd="228dp"/>/>
                            <TextView
                                    android:text="oder"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:id="@+id/textView5"
                                    android:textColor="@android:color/darker_gray"
                                    android:layout_marginStart="8dp"
                                    app:layout_constraintStart_toEndOf="@+id/textView4"
                                    app:layout_constraintEnd_toStartOf="@+id/textView6" android:layout_marginEnd="8dp"
                                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="7dp"/>
                            <View
                                    android:text="TextView"
                                    android:layout_width="0dp"
                                    android:layout_height="1dp"
                                    android:id="@+id/textView6"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="7dp"
                                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
                                    android:background="@android:color/darker_gray" android:layout_marginEnd="20dp"
                                    android:layout_marginRight="20dp" app:layout_constraintStart_toStartOf="parent"
                                    android:layout_marginLeft="228dp" android:layout_marginStart="228dp"/>
                        </android.support.constraint.ConstraintLayout>
                    </LinearLayout>
                </android.support.constraint.ConstraintLayout>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>